--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "homepage": "https://rouaa-belhaj-ali.github.io/Quizzi/",
-  "name": "quizi-app",
+  "name": "Quizzi",
   "private": true,
   "version": "0.0.0",
   "type": "module",
